// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`wpp-sticky-bar render one-line sticky bar 1`] = `
<wpp-sticky-bar class="wpp- wpp-one-line wpp-sticky-bar" style="z-index: 890;">
  <mock:shadow-root>
    <div class="container">
      <div class="header">
        <div class="left-area">
          <wpp-action-button variant="secondary">
            <wpp-icon-chevron direction="left" slot="icon-start"></wpp-icon-chevron>
          </wpp-action-button>
          <wpp-typography class="bar-title" type="m-strong">
            Page Title
          </wpp-typography>
        </div>
        <div class="right-area"></div>
      </div>
    </div>
  </mock:shadow-root>
</wpp-sticky-bar>
`;

exports[`wpp-sticky-bar render two-lines sticky bar with custom content 1`] = `
<wpp-sticky-bar class="wpp- wpp-sticky-bar wpp-two-lines" style="z-index: 890;">
  <mock:shadow-root>
    <div class="container">
      <div class="header">
        <div class="left-area">
          <wpp-action-button variant="secondary">
            <wpp-icon-chevron direction="left" slot="icon-start"></wpp-icon-chevron>
          </wpp-action-button>
          <wpp-typography class="bar-title" type="m-strong">
            Page Title
          </wpp-typography>
        </div>
        <div class="right-area">
          <wpp-action-button variant="primary">
            Action Btn
          </wpp-action-button>
          <wpp-button size="s" variant="secondary">
            Secondary 2
          </wpp-button>
          <wpp-button size="s" variant="secondary">
            Secondary 1
          </wpp-button>
          <wpp-button size="s" variant="primary">
            Primary
          </wpp-button>
        </div>
      </div>
      <div class="body">
        <slot name="content"></slot>
      </div>
    </div>
  </mock:shadow-root>
  <div slot="content">
    <wpp-typography type="m-body">
      Body Content
    </wpp-typography>
  </div>
</wpp-sticky-bar>
`;

exports[`wpp-sticky-bar render two-lines-with-tabs sticky bar 1`] = `
<wpp-sticky-bar class="wpp- wpp-sticky-bar wpp-two-lines-with-tabs" style="z-index: 890;">
  <mock:shadow-root>
    <div class="container">
      <div class="header">
        <div class="left-area">
          <wpp-action-button variant="secondary">
            <wpp-icon-chevron direction="left" slot="icon-start"></wpp-icon-chevron>
          </wpp-action-button>
          <wpp-typography class="bar-title" type="m-strong">
            Page Title
          </wpp-typography>
        </div>
        <div class="right-area">
          <wpp-action-button variant="primary">
            Action Btn
          </wpp-action-button>
          <wpp-button size="s" variant="secondary">
            Secondary 2
          </wpp-button>
          <wpp-button size="s" variant="secondary">
            Secondary 1
          </wpp-button>
          <wpp-button size="s" variant="primary">
            Primary
          </wpp-button>
        </div>
      </div>
      <div class="body">
        <wpp-tabs size="s" value="tab1">
          <wpp-tab size="s" value="tab1">
            Tab 1
          </wpp-tab>
          <wpp-tab size="s" value="tab2">
            Tab 2
          </wpp-tab>
          <wpp-tab size="s" value="tab3">
            Tab 3
          </wpp-tab>
          <wpp-tab size="s" value="tab4">
            Tab 4
          </wpp-tab>
          <wpp-tab size="s" value="tab5">
            Tab 5
          </wpp-tab>
        </wpp-tabs>
      </div>
    </div>
  </mock:shadow-root>
</wpp-sticky-bar>
`;
